# Exia-Shell-2.0

./: .gitignore  .travis.yml  CMakeLists.txt  ContainNumber.c  ContainNumberPrototype.c  MAKEFILE  README.md  Repartitiontemps  Repartitiontemps.txt  Wpwd.c  assistant.c  assistant.h  cd.c  cd.h  color.h  config.c  config.h  config.txt  display.c  display.h  exec.c  exec.h  expert.c  expert.h  hanoi.c  hanoi.h  language.c  language.h  listUser.c  listUser.h  load.c  load.h  log.c  log.h  main.c  main.h  motd.c  motd.h  natural.c  natural.h  (+12 more)
defaults/: README.md  assistant  profile
defaults/lang/: EN  FR  en  es  fr  spa
defaults/motd/: en  es  fr
defaults/natural/: en  es  fr
doc/: Dossier technique.md  Mode d'emploi.md  Mode d'emplois.md  Repartitiontemps.md  Repartitiontemps.txt
